--- a/assets/sass/2-basics/_body-elements.sass
+++ b/assets/sass/2-basics/_body-elements.sass
@@ -6,8 +6,6 @@ body
 	background-color: $body-bg
 	font-size: 14px
 	font-family: $font-default
-	overflow: auto
-	height: 100%
 	&.nothome
 		background: $body-bg
 
